--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -2,7 +2,7 @@
     background-color: rgb(0, 64, 182);
     color: rgb(255, 255, 255);
     border: none;
-    border-radius: 3px;
+    /* border-radius: 3px; */
     padding: 5px 10px;
     /* margin: 5px; */
     display: inline-block;
