--- a/src/components/AppFormulario/styles.module.css
+++ b/src/components/AppFormulario/styles.module.css
@@ -8,14 +8,13 @@
 }
 
 .bodyFormMensagem{
-  padding: 7px 0px;
-  border: 1px solid black;
+  padding: 0px 0px;
   border-radius: 0px;
-  padding: 5px;
+  /* border: 1px solid black; */
 }
 
 .bodyFormInfo{
-  
+  padding: 0px;
 }
 
 .inputs{
