--- a/src/components/AppTabela/styles.module.css
+++ b/src/components/AppTabela/styles.module.css
@@ -19,7 +19,7 @@
     border-collapse: collapse;
     align-items: center;
     overflow-y: scroll;
-    /* max-width: 98%; */
+    width: 100%;
 }
 .thead{
     border-collapse: collapse;
@@ -41,6 +41,7 @@
 .tbody td {
     border: 1px solid black;
     padding: 1px 2px;
+    height: 30px;
 }
 
 .tbody tr:hover{
