--- a/src/components/Mensagem/styles.module.css
+++ b/src/components/Mensagem/styles.module.css
@@ -1,9 +1,11 @@
 .container {
-    margin: 20px;
+    /* margin: 20px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* Estilização das Classes */
@@ -22,8 +24,8 @@
     font-weight: 700;
     font-size: 15px;
     
-    width: 500px;
-    height: 50px;
+    width: 100%;
+    height: 40px;
 }
 
 .success {
